<resources>
    <string name="app_name">AAHAR(Customer)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_mess">DMess</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_remainder">Remainder</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_addmess">Add Mess</string>
    <string name="menu_addmenu">Add Menu</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="join_mess">Join a new mess</string>
    <string name="enter_code">Enter the code</string>
    <string name="join_button">Join</string>
    <string name="signedas">You are signed in as</string>

    <!--    Join Activity-->
    <string name="welcome_back">Welcome Back</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginText">I want to Login</string>
    <string name="signInText">I want to Sign Up</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="team_ameya_s_project">Team Ameya\'s Project</string>
    <string name="food_quote">दीपो भक्षयते ध्वान्तं</string>
    <string name="notifications">Notifications</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="yes_account">Already have an account? Login</string>
    <string name="sign_in_to_enter">Sign in to Enter</string>
    <string name="welcome_user">Welcome User</string>
    <string name="join">Join</string>
    <string name="complaints_and_reviews">Complaints and Reviews</string>
    <string name="ratings">Ratings</string>
    <string name="price_per_month">Price per month :</string>
    <string name="total_count">Total Count</string>
    <string name="mess_info">Mess Info</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_mess_name">Enter Mess Name</string>
    <string name="enter_mess_address">Enter Mess Address</string>
    <string name="enter_mess_email">Enter Mess Email</string>
    <string name="enter_monthly_price">Enter Monthly Price</string>
    <string name="enter_special_dishes">Enter Special Dishes</string>
    <string name="create">Create</string>
    <string name="total_customers">Total customers :</string>
    <string name="total_reviews">Total Reviews :</string>
    <string name="overall_rating">Overall Rating :</string>
    <string name="mess_image">Mess Image</string>
    <string name="enter_upi_id">Enter Upi Id</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="aahar_logo">aahar logo</string>
    <string name="otp_verification">OTP verification</string>
    <string name="_9">9</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="enter_today_s_menu">Enter today\'s menu</string>
    <string name="add_today_s_menu">Add Today\'s Menu</string>
    <string name="add">Add</string>
    <string name="today_s_attendance_session">Today\'s Attendance session</string>
    <string name="start_session">Start Session</string>
    <string name="end_session">End Session</string>
    <string name="attendance">Attendance</string>
    <string name="payment">Payment</string>

    <string name="not_rated_yet">Not rated yet!</string>
    <string name="users">Users</string>
    <string name="notification">Notification</string>
</resources>