<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendence"
            android:title="@string/menu_attendance" />

        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_users"
            android:title="@string/users" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_addmess"
            android:icon="@drawable/ic_add_mess"
            android:title="@string/menu_addmess" />

        <item
            android:id="@+id/nav_addmenu"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_addmenu"/>
    </group>
</menu>