<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.enduser.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.example.enduser.ui.attendance.AttendanceFragment"
        android:label="@string/menu_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/nav_student"
        android:name="com.example.enduser.ui.student.StudentFragment"
        android:label="Student"
        tools:layout="@layout/fragment_student" />

    <fragment
<<<<<<< HEAD
        android:id="@+id/nav_notification"
        android:name="com.example.enduser.ui.Notification.NotificationFragment"
        android:label="Notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.enduser.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
=======
>>>>>>> origin
        android:id="@+id/nav_addmess"
        android:name="com.example.enduser.ui.addMess.AddMessFragment"
        android:label="@string/menu_addmess"
        tools:layout="@layout/fragment_add_mess" />

    <fragment
        android:id="@+id/nav_addmenu"
        android:name="com.example.enduser.ui.addMenu.AddMenuFragment"
        android:label="@string/menu_addmenu"
        tools:layout="@layout/fragment_add_menu"/>
</navigation>